--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^1.7.4",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0"
     },
     "dependencies": {
+        "@alpinejs/focus": "^3.14.1",
         "yarn": "^1.22.22"
     }
 }
