--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=b7876f21847a9ead5fcb37b651fdc4f1",
+    "/css/app.css": "/css/app.css?id=c32277a36ccec66b9978ed383a0515ee"
 }
